k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rudis-reifenklicker
  labels:
    app.kubernetes.io/part-of: rudis-reifenklicker
