k8s/10-postgres-headless-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-headless
  namespace: rudis-reifenklicker
  labels:
    app: postgres
spec:
  # Headless Service: liefert stabile DNS-Namen wie
  # postgres-0.postgres-headless.rudis-reifenklicker.svc.cluster.local
  clusterIP: None
  selector:
    app: postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
