k8s/11-postgres-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: rudis-reifenklicker
  labels:
    app: postgres
spec:

  ## Headless Service: liefert stabile DNS-Namen wie
  ## postgres-0.postgres-headless.rudis-reifenklicker.svc.cluster.local
  #clusterIP: None

  # Regulaerer ClusterIP-Service, auf den sich das Backend verbindet.
  selector:
    app: postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
