k8s/21-backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: rudis-reifenklicker
  labels:
    app: backend
spec:
  selector:
    app: backend
  ports:
    - name: http
      port: 8000
      targetPort: http
