k8s/31-frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: rudis-reifenklicker
  labels:
    app: frontend
spec:
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: http
